--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
 
     "content_scripts": [
         {
-            "matches": ["*://*.srf.ch/*"],
+            "matches": ["*://*.srf.ch/*", "*://*.rsi.ch/*"],
             "js": ["js/srfch_content.js"]
         }
     ],
