added applications entry to the manifest.json (for min. version and add-on id)

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,13 @@
         "url": "https://github.com/kaespi/srfchwx"
     },
 
+    "applications": {
+        "gecko": {
+            "id": "srfch@kgmw.ch",
+            "strict_min_version": "50.0"
+        }
+    },
+
     "icons": {
         "48": "icons/srfch_48.png"
     },
