trigger the loading/execution of the content script earlier to guarantee the right events are fired

--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,8 @@
     "content_scripts": [
         {
             "matches": ["*://*.srf.ch/*", "*://*.rsi.ch/*"],
-            "js": ["js/srfch_content.js"]
+            "js": ["js/srfch_content.js"],
+            "run_at": "document_start"
         }
     ],
 
