Revert "test not using a filename template"
This reverts commit a4d9b2121b24d6ebf68cf0f2b98cd066eff80139.

--- a/.github/workflows/srfchwx_ci.yml
+++ b/.github/workflows/srfchwx_ci.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           cmd: build
           source: src
+          filename: '{name}-{version}.xpi'
 
       - name: "Upload artifacts"
         uses: actions/upload-artifact@v2
